# fleet-gateway

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  config.example.yaml  pyproject.toml
.github/workflows/: test.yml
claude-code/: README.md  settings_snippet.json
claude-code/commands/: fleet-adversarial.md  fleet-brainstorm.md  fleet-challenge.md  fleet-code-review.md  fleet-consensus.md  fleet-diff.md  fleet-loop.md  fleet-perspectives.md  fleet-review.md  fleet-swot.md
claude-code/hooks/: README.md
docker/: .env.example  docker-compose.yml
docs/architecture/: README.md  module-map.md  request-flow.md  routing-logic.md  system-overview.md
fleet_gateway/: __init__.py  __main__.py  config.py  files.py  mcp.py  patterns.py  ratelimit.py  router.py  scrape.py  search.py  server.py  setup_wizard.py
fleet_gateway/backends/: __init__.py  anthropic.py  base.py  openai_compat.py
templates/: README.md  adversarial.md  brainstorm.md  challenge.md  consensus.md  loop_refine.md  perspectives.md  review_code.md  review_text.md  swot.md
tests/: test_basic.py
